--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
 
       - name: Fix permissions
-        run: chmod -R 666 dist
+        run: sudo chmod -R 666 dist
 
       - name: Build JS library
         run: npm run build-rollup
