--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebAssembly version of the Rubber Band Library (high quality software library for audio time-stretching and pitch-shifting)",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
-  "types": "dist/types/src/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "build-bindings": "sh -c ./build.sh",
     "build-rollup": "rollup -c",
