--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rubberband-wasm",
-  "version": "2.0.2-beta.0",
+  "version": "3.3.0",
   "description": "WebAssembly version of the Rubber Band Library (high quality software library for audio time-stretching and pitch-shifting)",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
